--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-adapter-react-16": "^1.12.0",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
     "html": "^1.0.0",
@@ -26,6 +26,7 @@
     "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
+    "redux-mock-store": "^1.5.3",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "rodal": "^1.6.3",
@@ -37,6 +38,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy":"http://localhost:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
